--- a/maths.html
+++ b/maths.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div id="maths">
+    <main id="maths">
         <div class="stats">Correct: {{ correct }}; Wrong: {{ wrong }}</div>
         <div class="row">{{ op1 }}</div>
         <div class="row"><span>+ </span><span>{{ op2 }}</span></div>
@@ -24,7 +24,7 @@
         </div>
 
         <div>{{ result }}</div>
-    </div>
+    </main>
     <script>
         function getRandom() {
             var result = 0;
