--- a/maths.html
+++ b/maths.html
@@ -11,7 +11,7 @@
     <main id="maths">
         <div class="stats">Correct: {{ correct }}; Wrong: {{ wrong }}</div>
         <div class="row">{{ op1 }}</div>
-        <div class="row"><span>+ </span><span>{{ op2 }}</span></div>
+        <div class="row"><span> {{ op }} </span><span>{{ op2 }}</span></div>
         <div class="row">
             <hr size="2px">
         </div>
@@ -33,6 +33,19 @@
             }
             return result;
         }
+
+        function randomOp() {
+            var r = Math.random();
+            console.log(r);
+            var op;
+            if (r <= 0.5){
+                op = '+'
+            }else{
+                op = '-'
+            }
+            return op;
+        }
+
         var app7 = new Vue({
             el: '#maths',
             data: {
@@ -40,6 +53,7 @@
                 wrong: 0,
                 correct: 0,
                 wrong: 0,
+                op: "+",
                 op1: getRandom(),
                 op2: getRandom(),
                 answer: "",
@@ -48,7 +62,14 @@
             methods: {
                 judge: function () {
                     var answer = parseInt(this.answer)
-                    if (answer == this.op1 + this.op2) {
+                    var expected;
+                    if (this.op == "+") {
+                        expected = this.op1 + this.op2;
+                    }else if(this.op == "-") {
+                        expected = this.op1 - this.op2;
+                    }
+
+                    if (answer == expected) {
                         this.result = "Correct!";
                         this.correct ++;
                     } else {
@@ -57,8 +78,15 @@
                     }
                 },
                 refresh: function () {
+                    this.op = randomOp();
                     this.op1 = getRandom();
                     this.op2 = getRandom();
+                    if (this.op == "-" && this.op1 < this.op2){
+                        var temp;
+                        temp = this.op1;
+                        this.op1 = this.op2;
+                        this.op2 = temp;
+                    }
                     this.answer = "";
                     this.result = "";
                 }
