--- a/maths.html
+++ b/maths.html
@@ -3,27 +3,55 @@
 
 <head>
     <title>Maths</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </head>
 
 <body>
     <main id="maths">
-        <div class="stats">Correct: {{ correct }}; Wrong: {{ wrong }}; Timer: {{ h }}:{{ m }}:{{ s }}</div>
-        <div class="row">{{ op1 }}</div>
-        <div class="row"><span> {{ op }} </span><span>{{ op2 }}</span></div>
-        <div class="row">
-            <hr size="2px">
-        </div>
-        <div class="row">
-            <input id="answer" type="text" size="4" v-model="answer" ref="answer">
-        </div>
-        <div class="row">
-            <button v-on:click="judge">Submit</button>
-            <button v-on:click="refresh">Next</button>
-        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">Correct: {{ correct }}; Wrong: {{ wrong }}</div>
+            </div>
+            <div class="row">
+                <div class="col-6">Timer: {{ ("0"+h).slice(-2) }}:{{ ("0"+m).slice(-2) }}:{{ ("0"+s).slice(-2) }}</div>
+            </div>
+            <div class="row text-right wide-ls">
+                <div class="col-6">{{ op1 }}</div>
+            </div>
+            <div class="row text-right wide-ls">
+                <div class="col-6"><span> {{ op }} </span><span>{{ op2 }}</span></div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <hr class="math">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <input class="form-control text-right wide-ls p-0" id="answer" type="text" size="4" v-model="answer" ref="answer">
+                </div>
+            </div>
+            <div class="row mt-1">
+                <div class="col-3">
 
-        <div id="result"><span v-bind:class="result_class">{{ result }}</span></div>
+                    <button v-on:click="judge" class="btn btn-primary">Submit</button>
+                </div>
+                <div class="col-3">
+
+                    <button v-on:click="refresh" class="btn btn-primary">Next</button>
+                </div>
+            </div>
+            <div id="result" class="row mt-2">
+            <!-- <div class="col" v-bind:class="result_class">{{ result }}</div> -->
+            <div class="col-6">
+
+            <div v-bind:class="result_class">{{ result }}</div>
+            </div>
+            </div>
+        </div>
     </main>
     <script>
         function getRandom() {
@@ -38,9 +66,9 @@
             var r = Math.random();
             console.log(r);
             var op;
-            if (r <= 0.5){
+            if (r <= 0.5) {
                 op = '+'
-            }else{
+            } else {
                 op = '-'
             }
             return op;
@@ -65,8 +93,8 @@
                 s: 0,
             },
             mounted: function () {
-                    console.log("mounted")
-                    this.timer = setInterval(this.get, 1000);
+                console.log("mounted")
+                this.timer = setInterval(this.get, 1000);
             },
             methods: {
                 judge: function () {
@@ -74,25 +102,25 @@
                     var expected;
                     if (this.op == "+") {
                         expected = this.op1 + this.op2;
-                    }else if(this.op == "-") {
+                    } else if (this.op == "-") {
                         expected = this.op1 - this.op2;
                     }
 
                     if (answer == expected) {
                         this.result = "Correct!";
-                        this.result_class = "green";
-                        this.correct ++;
+                        this.result_class = "alert-success";
+                        this.correct++;
                     } else {
                         this.result = "Wrong!"
-                        this.result_class = "red";
-                        this.wrong ++;
+                        this.result_class = "alert-danger";
+                        this.wrong++;
                     }
                 },
                 refresh: function () {
                     this.op = randomOp();
                     this.op1 = getRandom();
                     this.op2 = getRandom();
-                    if (this.op == "-" && this.op1 < this.op2){
+                    if (this.op == "-" && this.op1 < this.op2) {
                         var temp;
                         temp = this.op1;
                         this.op1 = this.op2;
@@ -100,16 +128,17 @@
                     }
                     this.answer = "";
                     this.result = "";
+                    this.result_class = "";
                 },
-                get: function() {
-                    this.s ++;
-                    if (this.s == 60){
+                get: function () {
+                    this.s++;
+                    if (this.s == 60) {
                         this.s = 0;
-                        this.m ++;
+                        this.m++;
                     }
-                    if (this.m == 60){
+                    if (this.m == 60) {
                         this.m = 0;
-                        this.h ++;
+                        this.h++;
                     }
                 }
             }
