--- a/maths.html
+++ b/maths.html
@@ -13,6 +13,9 @@
     <main id="maths">
         <div class="container">
             <div class="row">
+                <div class="col-6"><a href="./divide.html">÷</a></div>
+            </div>
+            <div class="row">
                 <div class="col-6">Correct: {{ correct }}; Wrong: {{ wrong }}</div>
             </div>
             <div class="row">
